# SizzleEngine

./: CMakeLists.txt  project.szproj
SizzleEngine/: CMakeLists.txt
SizzleEngine/Runtime/: CMakeLists.txt  ObjectHeaders.xml
SizzleEngine/Runtime/Core/: CMakeLists.txt  CoreAPI.h
SizzleEngine/Runtime/Core/CoreDebug/: DebugMacros.h
SizzleEngine/Runtime/Core/CoreDebug/Private/: DebugMacros.cpp  DebugStackTrace.cpp  DebugStackTrace.h  ILogContext.cpp
SizzleEngine/Runtime/Core/CoreDebug/Public/: CheckException.h  ILogContext.h
SizzleEngine/Runtime/Core/Debug/: DebugMacros.h
SizzleEngine/Runtime/Core/Debug/Private/: DebugMacro.cpp  DebugMacros.cpp  SLogContext.cpp
SizzleEngine/Runtime/Core/Debug/Public/: ILogContext.h  SLogContext.h
SizzleEngine/Runtime/Core/Delegate/: Delegate.h
SizzleEngine/Runtime/Core/Delegate/EngineDelegates/: EngineDelegates.cpp  EngineDelegates.h
SizzleEngine/Runtime/Core/Pools/: MemoryPool.h
SizzleEngine/Runtime/Core/Serialization/: SArchive.cpp  SArchive.h
SizzleEngine/Runtime/Core/Serialization/Private/: SDataSerializer.cpp
SizzleEngine/Runtime/Core/Serialization/Public/: SDataSerializer.h
SizzleEngine/Runtime/Core/Statistics/: Statistics.cpp  Statistics.h
SizzleEngine/Runtime/Core/Threading/Task/Private/: Task.cpp
SizzleEngine/Runtime/Core/Threading/Task/Public/: Task.h
SizzleEngine/Runtime/Core/Util/: Event.cpp  Event.h  LibraryLoader.cpp  LibraryLoader.h  RefCounter.cpp  RefCounter.h  RefPointer.h  ScopeGuard.h  SpinLock.cpp  SpinLock.h
SizzleEngine/Runtime/Engine/: CMakeLists.txt  EngineAPI.h
SizzleEngine/Runtime/Engine/Class/: SEngine.cpp  SEngine.generated.h  SEngine.h
SizzleEngine/Runtime/Engine/Module/: EngineModule.cpp  EngineModule.h
SizzleEngine/Runtime/Launch/: CMakeLists.txt  MainLaunch.cpp  MainLaunch.h
SizzleEngine/Runtime/Launch/Windows/: WinLaunch.cpp
SizzleEngine/Runtime/ObjectCore/: CMakeLists.txt  ObjectCoreAPI.h
SizzleEngine/Runtime/ObjectCore/Object/: Object.h  ObjectCast.h  SObjectRegistry.cpp  SObjectRegistry.h
SizzleEngine/Runtime/ObjectCore/Object/Macros/: SClassMacros.h
SizzleEngine/Runtime/ObjectCore/Object/Private/: Object.cpp  SClass.cpp  SField.cpp
SizzleEngine/Runtime/ObjectCore/Object/Public/: SClass.h  SField.h
SizzleEngine/Runtime/RenderContext/: CMakeLists.txt  RenderContextAPI.h
SizzleEngine/Runtime/RenderContext/Private/: RenderCommand.cpp  RenderContext.cpp
SizzleEngine/Runtime/RenderContext/Public/: RenderCommand.h  RenderContext.h
SizzleEngine/Runtime/RenderCore/: CMakeLists.txt  RenderCoreAPI.h
SizzleEngine/Runtime/RenderCore/Private/: RenderTaskContext.cpp  RenderThread.cpp
SizzleEngine/Runtime/RenderCore/Public/: RenderTask.h  RenderTaskContext.h  RenderThread.h
SizzleEngine/Runtime/Vulkan/: CMakeLists.txt  VulkanCoreAPI.h  VulkanExportModule.cpp  VulkanExportModule.h
SizzleEngine/Runtime/Vulkan/Private/: VulkanBuffer.cpp  VulkanBuffer.h  VulkanDebug.cpp  VulkanDebug.h  VulkanDevice.cpp  VulkanDevice.h  VulkanFence.cpp  VulkanFence.h  VulkanFunctions.h  VulkanQueue.cpp  VulkanQueue.h  VulkanRenderContext.cpp  VulkanStats.h  VulkanWrapper.cpp  VulkanWrapper.h
SizzleEngine/Runtime/Vulkan/Public/: VulkanRenderContext.h
SizzleEngine/Tests/: CMakeLists.txt
SizzleEngine/Tests/RenderingTests/: CMakeLists.txt  render_task_main.cpp
